4 Июня
- Выбор темы
- Создание проекта Django + .gitignore

8 Июня
- Настройка проекта
- Сохранение зависимостей через poetry
- Создание моделей и миграций для Idea, Comment, Category, User

11 Июня
- Django ORM (заполнение/изменение данных моделей)
- Обновление шаблонов для отображения данных БД на сайте
- Добавление Toolbar
- SQL оптимизация запросов

14 Июня
- Добавлены Class Based Views для Idea, Category
- Добавлены Формы и шаблоны  для Idea, Category
- Установлен Celery
- Добавлен docker compose для запуска RabbitMQ
- Обновлена форма для Contacts
- Добавлены шаблоны Bootstrap

15 Июня
- Настройка модуля User (авторизация/регистрация/разлогин)
- Добавление Navbar

16 Июня
- Добавлен шаблон для status=403
- Добавлены карточки Idea на главной странице
- Обновлен Navbar
- Добавлены доступы пользователей к модулям Idea, Category

17 Июня:
- Настройка модуля Comment
- Добавление шаблона Comment к Idea
- Добавление ImageField к модулям Idea, Category

18 Июня:
- Обновление Navbar (сделан закреп)
- Обновление шаблонов Detail для Idea & Category. Для вывода отдельных карточек



СДЕЛАТЬ:
- Отправка комментариев
- Создание групп пользователей в БД (Admins, Mods, Users, Co-Authors, Investors, Verified Users)
- Персональная страничка User
- Доработать Users (Вывод по группам)
- Доработать Ideastatus
- Доработать Investment
- Доработать Partnership
- Доработать Rating
- Категории на главной странице в виде движущейся ленты
- Обновить Detail Category - добавить список Idea которые принадлежат категории
- Подключить postgress
- Сделать Docker compose для запуска всех приложений
- Доработать форму Contacts
- Доработать Search
- Оптимизация SQL запросов