@@ -5,8 +5,8 @@
   border: none;
   color: #FFFFFF;
   text-align: center;
-  font-size: 20px;
-  padding: 11px;
+  font-size: 15px;
+  padding: 10px;
   width: 120px;
   transition: all 0.5s;
   cursor: pointer;
