@@ -13,7 +13,6 @@
 
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 <link href="{% static 'css/main.css' %}" rel="stylesheet">
-<link href="{% static 'css/FontAwesome.css' %}" rel="stylesheet">
 
 </head>
 <body>
