@@ -1,58 +1,134 @@
 <section style="background-color: rgba(250,250,250,0);">
   <div class="container" style="width: 700px;">
     <div class="row">
-      <div class="col-sm-10 col-md-5 col-lg-7 col-xl-8 fixed-top-right">
+    <h2 class="mt-3 mb-3">Add new comment:</h2>
+    {% if user.is_authenticated %}
+    {{ comment_form.comment }}
+        <form id="commentForm" method="post" enctype="multipart/form-data" action="{% url "ideas:add_comment" pk=idea.pk %}" style="width: 600px">
+            {% csrf_token %}
+            <textarea id="commentTextArea" class="form-control" name="text" rows="3" style="background: #fff;" ></textarea>
+            <div class="d-flex justify-content-end gap-2">
+                <button id="postCommentButton" type="button" class="button56">Post comment</button>
+                <button id="clearCommentButton" type="button" class="button56">Clear</button>
+            </div>
+        </form>
+{#        <form method="post" enctype="multipart/form-data" action="{% url "ideas:add_comment" pk=idea.pk %}">#}
+{#            {% csrf_token %}#}
+{#            {{ comment_form.comment }}#}
+{#            <button class="btn btn-outline-warning mt-3" type="submit">Отправить</button>#}
+{##}
+{#        </form>#}
+    {% else %}
+        <p><a href="{% url 'users:login' %}">Login</a> to write comment.</p>
+    {% endif %}
+</div>
+
+  <div class="row">
+      <div class="col-sm-10 col-md-6 col-lg-8 col-xl-10 fixed-top-right">
         <div class="card">
           <div class="card-body">
             <div class="row mb-4">
-                {% for comment in comments %}
+                {% if comments %}
+                    {% for comment in idea.comments.all %}
                     <div class="col-12">
-                        <div class="d-flex align-items-start mb-4">
+                        <div class="d-flex align-items-start mb-2">
                             <img class="rounded-circle shadow-1-strong me-3" src="https://e7.pngegg.com/pngimages/799/987/png-clipart-computer-icons-avatar-icon-design-avatar-heroes-computer-wallpaper-thumbnail.png" alt="avatar" width="60" height="60">
                             <div class="flex-grow-1">
                                 <h6 class="fw-bold text-primary mb-1" href="{% url 'comment:detail' pk=comment.id %}">{{ comment.author }}</h6>
                                 <p class="text-muted small mb-0">Shared publicly - {{ comment.created_at }}</p>
                             </div>
                         </div>
-                        <p class="me-3 mb-4">{{ comment.text }}</p>
+                        <p class="me-3 mb-2">{{ comment.text }}</p>
                     </div>
 
-                        <div class="small d-flex justify-content-start">
-                          <a href="#!" class="d-flex align-items-center me-3 mb-4">
-                            <i class="far fa-thumbs-up me-2"></i>
-                            <p class="mb-0">Like</p>
-                          </a>
-                          <a href="#!" class="d-flex align-items-center me-3 mb-4">
-                            <i class="far fa-comment-dots me-2"></i>
-                            <p class="mb-0">Comment</p>
-                          </a>
-                          <a href="#!" class="d-flex align-items-center me-3 mb-4">
-                            <i class="fas fa-share me-2"></i>
-                            <p class="mb-0">Share</p>
-                          </a>
-                        </div>
-                {% endfor %}
+                            <div class="small d-flex justify-content-start">
+                              <a href="#!" class="d-flex align-items-center me-3 mb-4">
+                                <i class="far fa-thumbs-up me-2"></i>
+                                <p class="mb-0">Like</p>
+                              </a>
+                              <a href="#!" class="d-flex align-items-center me-3 mb-4">
+                                <i class="far fa-comment-dots me-2"></i>
+                                <p class="mb-0">Comment</p>
+                              </a>
+                              <a href="#!" class="d-flex align-items-center me-3 mb-4">
+                                <i class="fas fa-share me-2"></i>
+                                <p class="mb-0">Share</p>
+                              </a>
+
+                                {% if user.is_staff or user.id == comment.author.id %}
+                                    <a href="{% url 'comment:update' pk=comment.id %}">Edit</a>
+                                    |
+                                    <a href="{% url 'comment:delete' pk=comment.id %}">Delete</a>
+                                {% endif %}
+                            </div>
+
+                    {% endfor %}
+                {% else %}
+                    <p>No comments so far</p>
+                {% endif %}
             </div>
 
           </div>
-          <div class="card-footer py-3 border-0" style="background-color: #ffffff;">
-            <div class="d-flex flex-start w-100">
-              <img class="rounded-circle shadow-1-strong me-3"
-                src="https://e7.pngegg.com/pngimages/799/987/png-clipart-computer-icons-avatar-icon-design-avatar-heroes-computer-wallpaper-thumbnail.png" alt="avatar" width="40"
-                height="40" />
-              <div data-mdb-input-init class="form-outline w-100">
-                <textarea class="form-control" id="textAreaExample" rows="4"
-                  style="background: #fff;"></textarea>
-                <label class="form-label" for="textAreaExample">Message</label>
-              </div>
-            </div>
-            <div class="float-end mt-2 pt-1">
-              <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm">Post comment</button>
-              <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-primary btn-sm">Cancel</button>
-            </div>
-          </div>
+
+{#                <form id="commentForm" method="post" enctype="multipart/form-data" action="{% url "ideas:add_comment" pk=idea.pk %}">#}
+{#                    {% csrf_token %}#}
+{#                    <div class="d-flex flex-start w-100">#}
+{#                        {{ comment_form.comment }}#}
+{#                        <label class="form-label" for="commentTextArea">Message</label>#}
+{#                        <div class="float-end mt-2 pt-1">#}
+{#                            <button id="postCommentButton" type="submit" class="btn btn-primary btn-sm">Post comment</button>#}
+{#                            <button id="clearCommentButton" type="button" class="btn btn-outline-primary btn-sm">Clear</button>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </form>#}
         </div>
       </div>
     </div>
   </div>
+
+
+
 </section>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    var postCommentButton = document.getElementById('postCommentButton');
+    var commentTextArea = document.getElementById('commentTextArea');
+
+    postCommentButton.addEventListener('click', function() {
+        var formData = new FormData();
+        formData.append('text', commentTextArea.value);
+
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', "{% url 'ideas:add_comment' pk=idea.pk %}");
+        xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+
+        xhr.onreadystatechange = function() {
+            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                console.log('Comment sent successfully');
+                commentTextArea.value = '';
+                location.reload();
+            } else if (xhr.readyState === XMLHttpRequest.DONE) {
+                console.error('Failed to send comment:', xhr.status, xhr.statusText);
+            }
+        };
+
+        xhr.send(formData);
+    });
+
+    clearCommentButton.addEventListener('click', function() {
+        commentTextArea.value = '';
+    });
+
+});
+
+</script>
+
+
+
+
+
+
+
+
+
