@@ -23,9 +23,9 @@
                     {% include 'components/navbar_dropdown.html' %}
                 {% endif %}
 
-            <div class="d-flex align-items-center mx-5">
+            <div class="d-flex align-items-center" style="margin-top: auto; margin-left: 60px;">
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 600px">
                     <button class="btn btn-outline-success  me-5" type="submit">Search</button>
                 </form>
             </div>
