@@ -38,12 +38,14 @@
 
 18 Июня:
 - Обновление Navbar (сделан закреп)
-- Обновление шаблонов Detail для Idea & Category. Для вывода отдельных карточек
+- Обновление шаблонов Detail для Idea & Category. Для вывода отдельных карточек (добавление сетки)
 
+20 Июня:
+- Доделан полный функционал комментариев
+-
 
 
 СДЕЛАТЬ:
-- Отправка комментариев
 - Создание групп пользователей в БД (Admins, Mods, Users, Co-Authors, Investors, Verified Users)
 - Персональная страничка User
 - Доработать Users (Вывод по группам)
@@ -51,6 +53,7 @@
 - Доработать Investment
 - Доработать Partnership
 - Доработать Rating
+- Система лайков
 - Категории на главной странице в виде движущейся ленты
 - Обновить Detail Category - добавить список Idea которые принадлежат категории
 - Подключить postgress
